[gd_scene load_steps=13 format=3 uid="uid://q85jmmsrfwt"]

[ext_resource type="Script" path="res://objects/portal/portal.gd" id="1_3ejll"]
[ext_resource type="Shader" path="res://objects/portal/portal_surface.gdshader" id="1_4gm4d"]
[ext_resource type="Texture2D" uid="uid://m2j5wijlvuyp" path="res://assets/obsidian.png" id="2_25kow"]
[ext_resource type="Environment" uid="uid://dme2e6mo1fhnp" path="res://scenes/environment.tres" id="3_7uwx1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gsw3r"]
albedo_texture = ExtResource("2_25kow")
emission_enabled = true
emission_texture = ExtResource("2_25kow")
uv1_scale = Vector3(3, 2, 1)
texture_filter = 4

[sub_resource type="BoxMesh" id="BoxMesh_e3yux"]
material = SubResource("StandardMaterial3D_gsw3r")

[sub_resource type="BoxShape3D" id="BoxShape3D_iaalk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yh5tx"]
size = Vector3(3, 4, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sbej2"]
transparency = 1
albedo_color = Color(0, 0, 1, 0.392157)

[sub_resource type="BoxMesh" id="BoxMesh_mh5df"]
material = SubResource("StandardMaterial3D_sbej2")
size = Vector3(3, 4, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_figwg"]
viewport_path = NodePath("PortalSurface/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q12p2"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_4gm4d")
shader_parameter/texture_albedo = SubResource("ViewportTexture_figwg")

[node name="Portal" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("1_3ejll")

[node name="PortlaMesh" type="Node3D" parent="."]

[node name="MeshInstance3D4" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D4/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D5/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D6/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D7/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D8"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D8/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D9"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D9/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D10"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D10/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D11" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D11"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D11/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D12" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D12"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D12/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D13" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D13"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D13/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D14" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D14"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D14/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D15" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D15"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D15/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D16" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -1.5, 0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D16"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D16/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D17" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D17"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D17/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D18" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D18"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D18/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D19" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D19"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D19/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D20" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D20"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D20/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D21" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D21"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D21/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D22" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D22"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D22/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D23" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D23"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D23/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D24" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D24"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D24/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D25" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D25"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D25/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D26" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D26"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D26/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D27" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D27"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D27/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D28" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D28"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D28/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="MeshInstance3D29" type="MeshInstance3D" parent="PortlaMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -1.5, -0.5)
mesh = SubResource("BoxMesh_e3yux")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="PortlaMesh/MeshInstance3D29"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortlaMesh/MeshInstance3D29/StaticBody3D"]
shape = SubResource("BoxShape3D_iaalk")

[node name="PortalDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortalDetector"]
shape = SubResource("BoxShape3D_yh5tx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PortalDetector/CollisionShape3D"]
visible = false
mesh = SubResource("BoxMesh_mh5df")

[node name="PortalSurface" type="CSGBox3D" parent="."]
layers = 2
cast_shadow = 0
size = Vector3(3, 4, 0)
material = SubResource("ShaderMaterial_q12p2")

[node name="SubViewport" type="SubViewport" parent="PortalSurface"]
size_2d_override = Vector2i(512, 256)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="PortalCamera" type="Camera3D" parent="PortalSurface/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1.8, 2.5)
cull_mask = 1048573
environment = ExtResource("3_7uwx1")
fov = 55.0
near = 0.001

[connection signal="body_entered" from="PortalDetector" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="PortalDetector" to="." method="_on_area_3d_body_exited"]
